GNOME Bugzilla – Bug 759913
glbufferpool: Fix build error
Last modified: 2015-12-28 03:29:43 UTC
When GST_GL_HAVE_PLATFORM_EGL is not defined, then info variable will not be used and this results in build error gstglbufferpool.c: In function 'gst_gl_buffer_pool_alloc': gstglbufferpool.c:274:17: error: variable 'info' set but not used [-Werror=unused-but-set-variable] GstVideoInfo *info; ^
Created attachment 317942 [details] [review] fix build error
Thanks.